private_server/guard/CELL-22/Q-49/error.txt
  File "/kunden/homepages/8/d657042007/htdocs/CodeSet/private_server/guard/CELL-22/Q-49/22-49.py", line 20
    inventory['gold'] = +=50
                         ^
SyntaxError: invalid syntax
